src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_binomial_out(value out, value count, value prob);
value atg_bitwise_and(value self, value other);
value atg_bitwise_and_(value self, value other);
value atg_bitwise_and_scalar_out(value out, value self, value other);
value atg_bitwise_and_scalar_tensor(value self, value other);
value atg_bitwise_and_scalar_tensor_out(value out, value self, value other);
value atg_bitwise_and_tensor(value self, value other);
value atg_bitwise_and_tensor_(value self, value other);
value atg_bitwise_and_tensor_out(value out, value self, value other);
value atg_bitwise_left_shift(value self, value other);
value atg_bitwise_left_shift_(value self, value other);
value atg_bitwise_left_shift_scalar_tensor(value self, value other);
value atg_bitwise_left_shift_scalar_tensor_out(value out, value self, value other);
value atg_bitwise_left_shift_tensor_out(value out, value self, value other);
value atg_bitwise_left_shift_tensor_scalar(value self, value other);
value atg_bitwise_left_shift_tensor_scalar_(value self, value other);
value atg_bitwise_left_shift_tensor_scalar_out(value out, value self, value other);
value atg_bitwise_not(value self);
value atg_bitwise_not_(value self);
value atg_bitwise_not_out(value out, value self);
value atg_bitwise_or(value self, value other);
value atg_bitwise_or_(value self, value other);
value atg_bitwise_or_scalar_out(value out, value self, value other);
value atg_bitwise_or_scalar_tensor(value self, value other);
value atg_bitwise_or_scalar_tensor_out(value out, value self, value other);
value atg_bitwise_or_tensor(value self, value other);
value atg_bitwise_or_tensor_(value self, value other);
value atg_bitwise_or_tensor_out(value out, value self, value other);
value atg_bitwise_right_shift(value self, value other);
value atg_bitwise_right_shift_(value self, value other);
value atg_bitwise_right_shift_scalar_tensor(value self, value other);
value atg_bitwise_right_shift_scalar_tensor_out(value out, value self, value other);
value atg_bitwise_right_shift_tensor_out(value out, value self, value other);
value atg_bitwise_right_shift_tensor_scalar(value self, value other);
value atg_bitwise_right_shift_tensor_scalar_(value self, value other);
value atg_bitwise_right_shift_tensor_scalar_out(value out, value self, value other);
value atg_bitwise_xor(value self, value other);
value atg_bitwise_xor_(value self, value other);
value atg_bitwise_xor_scalar_out(value out, value self, value other);
value atg_bitwise_xor_scalar_tensor(value self, value other);
value atg_bitwise_xor_scalar_tensor_out(value out, value self, value other);
value atg_bitwise_xor_tensor(value self, value other);
value atg_bitwise_xor_tensor_(value self, value other);
value atg_bitwise_xor_tensor_out(value out, value self, value other);
value atg_blackman_window(int64_t window_length, int options_kind, int options_device);
value atg_blackman_window_out(value out, int64_t window_length);
value atg_blackman_window_periodic(int64_t window_length, int periodic, int options_kind, int options_device);
value atg_blackman_window_periodic_out(value out, int64_t window_length, int periodic);
value atg_block_diag(value tensors);
value atg_block_diag_out(value out, value tensors);
value atg_bmm(value self, value mat2);
value atg_bmm_out(value out, value self, value mat2);
value atg_broadcast_tensors(value tensors);
value atg_broadcast_to(value self, value size);
value atg_bucketize(value self, value boundaries, int out_int32, int right);
value atg_bucketize_scalar(value self, value boundaries, int out_int32, int right);
value atg_bucketize_scalar_out(value out, value self, value boundaries, int out_int32, int right);
value atg_bucketize_tensor_out(value out, value self, value boundaries, int out_int32, int right);
value atg_can_cast(int from_, int to);
value atg_cartesian_prod(value tensors);
value atg_cat(value tensors, int64_t dim);
value atg_cat_out(value out, value tensors, int64_t dim);
value atg_cauchy(value self, double median, double sigma);
value atg_cauchy_(value self, double median, double sigma);
value atg_cauchy_out(value out, value self, double median, double sigma);
value atg_ccol_indices(value self);
value atg_ccol_indices_copy(value self);
value atg_ccol_indices_copy_out(value out, value self);
value atg_cdist(value x1, value x2, double p, value compute_mode);
value atg_ceil(value self);
value atg_ceil_(value self);
value atg_ceil_out(value out, value self);
value atg_celu(value self, value alpha);
value atg_celu_(value self, value alpha);
value atg_celu_out(value out, value self, value alpha);
value atg_chain_matmul(value matrices);
value atg_chain_matmul_out(value out, value matrices);
value atg_chalf(value self);
value atg_channel_shuffle(value self, int64_t groups);
value atg_channel_shuffle_out(value out, value self, int64_t groups);
value atg_cholesky(value self, int upper);
value atg_cholesky_inverse(value self, int upper);
value atg_cholesky_inverse_out(value out, value self, int upper);
value atg_cholesky_out(value out, value self, int upper);
value atg_cholesky_solve(value self, value input2, int upper);
value atg_cholesky_solve_out(value out, value self, value input2, int upper);
value atg_choose_qparams_optimized(value input, int64_t numel, int64_t n_bins, double ratio, int64_t bit_width);
value atg_chunk(value self, int64_t chunks, int64_t dim);