src/bindings/torch_bindings_generated2.ml


  let stubs_binomial_out =
    foreign
      "atg_binomial_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and =
    foreign "atg_bitwise_and" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_ =
    foreign "atg_bitwise_and_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_scalar_out =
    foreign
      "atg_bitwise_and_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_scalar_tensor =
    foreign "atg_bitwise_and_scalar_tensor" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_scalar_tensor_out =
    foreign
      "atg_bitwise_and_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_tensor =
    foreign "atg_bitwise_and_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_tensor_ =
    foreign "atg_bitwise_and_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_and_tensor_out =
    foreign
      "atg_bitwise_and_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift =
    foreign "atg_bitwise_left_shift" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_ =
    foreign "atg_bitwise_left_shift_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_scalar_tensor =
    foreign
      "atg_bitwise_left_shift_scalar_tensor"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_scalar_tensor_out =
    foreign
      "atg_bitwise_left_shift_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_tensor_out =
    foreign
      "atg_bitwise_left_shift_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_tensor_scalar =
    foreign
      "atg_bitwise_left_shift_tensor_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_tensor_scalar_ =
    foreign
      "atg_bitwise_left_shift_tensor_scalar_"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_left_shift_tensor_scalar_out =
    foreign
      "atg_bitwise_left_shift_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_not = foreign "atg_bitwise_not" (gc_tensor @-> returning raw_tensor)
  let stubs_bitwise_not_ = foreign "atg_bitwise_not_" (gc_tensor @-> returning raw_tensor)

  let stubs_bitwise_not_out =
    foreign "atg_bitwise_not_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or =
    foreign "atg_bitwise_or" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_ =
    foreign "atg_bitwise_or_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_scalar_out =
    foreign
      "atg_bitwise_or_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_scalar_tensor =
    foreign "atg_bitwise_or_scalar_tensor" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_scalar_tensor_out =
    foreign
      "atg_bitwise_or_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_tensor =
    foreign "atg_bitwise_or_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_tensor_ =
    foreign "atg_bitwise_or_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_or_tensor_out =
    foreign
      "atg_bitwise_or_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift =
    foreign "atg_bitwise_right_shift" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_ =
    foreign "atg_bitwise_right_shift_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_scalar_tensor =
    foreign
      "atg_bitwise_right_shift_scalar_tensor"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_scalar_tensor_out =
    foreign
      "atg_bitwise_right_shift_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_tensor_out =
    foreign
      "atg_bitwise_right_shift_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_tensor_scalar =
    foreign
      "atg_bitwise_right_shift_tensor_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_tensor_scalar_ =
    foreign
      "atg_bitwise_right_shift_tensor_scalar_"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_right_shift_tensor_scalar_out =
    foreign
      "atg_bitwise_right_shift_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor =
    foreign "atg_bitwise_xor" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_ =
    foreign "atg_bitwise_xor_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_scalar_out =
    foreign
      "atg_bitwise_xor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_scalar_tensor =
    foreign "atg_bitwise_xor_scalar_tensor" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_scalar_tensor_out =
    foreign
      "atg_bitwise_xor_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_tensor =
    foreign "atg_bitwise_xor_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_tensor_ =
    foreign "atg_bitwise_xor_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bitwise_xor_tensor_out =
    foreign
      "atg_bitwise_xor_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_blackman_window =
    foreign "atg_blackman_window" (int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_blackman_window_out =
    foreign "atg_blackman_window_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_blackman_window_periodic =
    foreign
      "atg_blackman_window_periodic"
      (int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_blackman_window_periodic_out =
    foreign
      "atg_blackman_window_periodic_out"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_block_diag =
    foreign "atg_block_diag" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_block_diag_out =
    foreign
      "atg_block_diag_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_bmm = foreign "atg_bmm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_bmm_out =
    foreign "atg_bmm_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_broadcast_tensors =
    foreign "atg_broadcast_tensors" (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_broadcast_to =
    foreign "atg_broadcast_to" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_bucketize =
    foreign
      "atg_bucketize"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_bucketize_scalar =
    foreign
      "atg_bucketize_scalar"
      (scalar @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_bucketize_scalar_out =
    foreign
      "atg_bucketize_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_bucketize_tensor_out =
    foreign
      "atg_bucketize_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_can_cast = foreign "atg_can_cast" (int @-> int @-> returning bool)

  let stubs_cartesian_prod =
    foreign "atg_cartesian_prod" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_cat =
    foreign "atg_cat" (ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cat_out =
    foreign
      "atg_cat_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cauchy =
    foreign "atg_cauchy" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_cauchy_ =
    foreign "atg_cauchy_" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_cauchy_out =
    foreign
      "atg_cauchy_out"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_ccol_indices = foreign "atg_ccol_indices" (gc_tensor @-> returning raw_tensor)

  let stubs_ccol_indices_copy =
    foreign "atg_ccol_indices_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ccol_indices_copy_out =
    foreign "atg_ccol_indices_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cdist =
    foreign
      "atg_cdist"
      (gc_tensor @-> gc_tensor @-> double @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_ceil = foreign "atg_ceil" (gc_tensor @-> returning raw_tensor)
  let stubs_ceil_ = foreign "atg_ceil_" (gc_tensor @-> returning raw_tensor)

  let stubs_ceil_out =
    foreign "atg_ceil_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_celu = foreign "atg_celu" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_celu_ = foreign "atg_celu_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_celu_out =
    foreign "atg_celu_out" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_chain_matmul =
    foreign "atg_chain_matmul" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_chain_matmul_out =
    foreign
      "atg_chain_matmul_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_chalf = foreign "atg_chalf" (gc_tensor @-> returning raw_tensor)

  let stubs_channel_shuffle =
    foreign "atg_channel_shuffle" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_channel_shuffle_out =
    foreign
      "atg_channel_shuffle_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cholesky = foreign "atg_cholesky" (gc_tensor @-> int @-> returning raw_tensor)

  let stubs_cholesky_inverse =
    foreign "atg_cholesky_inverse" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_cholesky_inverse_out =
    foreign
      "atg_cholesky_inverse_out"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_cholesky_out =
    foreign "atg_cholesky_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_cholesky_solve =
    foreign "atg_cholesky_solve" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_cholesky_solve_out =
    foreign
      "atg_cholesky_solve_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_choose_qparams_optimized =
    foreign
      "atg_choose_qparams_optimized"
      (ptr raw_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_chunk =
    foreign "atg_chunk" (gc_tensor @-> int64_t @-> int64_t @-> returning (ptr raw_tensor))
  ;;
